# silicon.ex

./: .credo.exs  .dockerignore  .formatter.exs  .gitignore  Dockerfile  README.md  mix.exs
.github/: dependabot.yml
config/: config.exs
lib/: native.ex  options.ex  silicon.ex  structs.ex
native/silicon_nif/: Cargo.toml  README.md
native/silicon_nif/src/: lib.rs  options.rs
test/: silicon_test.exs
