[package]
name = "silicon_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "silicon_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.9"
rustler = "0.31.0"
silicon = { version = "0.5.2", default-features = false, features = [
    "harfbuzz",
    "anyhow",
] }
syntect = { version = "5.2.0", features = ["plist-load"] }
